--- a/about_me.html
+++ b/about_me.html
@@ -64,7 +64,7 @@
       <div class ="words">
         <h2>Contact.</h2>
           <p>
-            <a href="https://www.linkedin.com/in/anna-young-a73197156/"> linkedin </a><br>
+            <a href="https://www.linkedin.com/in/anna-young-a73197156/" target="_blank"> linkedin </a><br>
             annayyoung@berkeley.edu
             7073651002
           </p>
