--- a/about_me.html
+++ b/about_me.html
@@ -36,8 +36,12 @@
       <img class="icon" src="icon2.svg">
       <div class ="words">
         <h2>Projects.</h2>
-        <p> Currently a project leader for web development.
+        <p>
+          <a href="https://github.com/annayyoung" target="_blank"> github </a><br>
+
+          Currently a project leader for web development.
             Past projects include: NLP, Gitlet, iOS Apps, and more.
+
 
         </p>
       </div>
