--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
   <html>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <head>
       <title> Anna Young </title>
       <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet">
