example of no css

--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Rozha+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="styles2.css">
+<!--  <link rel="stylesheet" type="text/css" href="styles2.css"> !-->
   <script src="../jquery-3.4.1.min.js"> </script>
   <script src="second.js"></script>
 
